@@ -1,5 +1,3 @@
-package dk.dbc.opensearch.common.types;
-
 /*
    
 This file is part of opensearch.
@@ -19,6 +17,8 @@ GNU General Public License for more details.
 You should have received a copy of the GNU General Public License
 along with opensearch.  If not, see <http://www.gnu.org/licenses/>.
 */
+
+package dk.dbc.opensearch.common.types;
 
 
 public enum DataStreamType 
