@@ -1,4 +1,5 @@
 0.9.1
+   - bug [9768] "Mismatch i adminData ID i fedora"
    - bug [9753] "Konstruktion af RELS-EXT bliver meget besværligt, hvis ikke CargoContaineren har en identifier"
    - bug [9723] "OwnerRelation bør ligge før store i datadock_jobs.xml"
    - bug [9647] "Der skal laves en type for Fedora PID istedet for at indholde den i en streng."
